<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_kagyi_letter" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium_2"
        android:paddingBottom="@dimen/margin_medium"
        android:text="@string/label_language_choose_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="@dimen/margin_medium_2"
        app:cardElevation="@dimen/margin_medium"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/mc_myanmar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_language">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:padding="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/tv_english_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_g_letter" />

            <TextView
                android:id="@+id/tv_english_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/label_english_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_myanmar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="@dimen/margin_medium_2"
        app:cardElevation="@dimen/margin_medium"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/mc_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mc_english"
        app:layout_constraintTop_toTopOf="@+id/mc_english">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_myanmar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_language">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_kagyi_letter" />

            <TextView
                android:id="@+id/tv_myanmar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:text="@string/label_myanmar_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="0dp"
        android:text="@string/label_font_choose_summary"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mc_english" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_unicode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/mc_zawgyi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_summary"
        app:layout_constraintVertical_chainStyle="packed">

        <RelativeLayout
            android:id="@+id/rl_unicode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_unicode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unicode_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_regular_3x" />

            <TextView
                android:id="@+id/tv_unicode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_unicode_title"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/label_unicode"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_regular_2x" />

            <ImageView
                android:id="@+id/iv_unicode_check"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium"
                app:srcCompat="@drawable/ic_font_selected" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_zawgyi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mc_unicode">

        <RelativeLayout
            android:id="@+id/rl_zawgyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_zawgyi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_zawgyi_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_regular_3x" />

            <TextView
                android:id="@+id/tv_zawgyi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_zawgyi_title"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/label_zawgyi"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_regular_2x" />

            <ImageView
                android:id="@+id/iv_zawgyi_check"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium"
                app:srcCompat="@drawable/ic_font_selected" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_next"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:longClickable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_done"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_regular_2x" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>